--- a/Architecture.org
+++ b/Architecture.org
@@ -1,9 +1,8 @@
 * Architecture
 - This is mostly for me to keep my thoughts in order.
 ** State Change Management
-- All components may have state
-- Component state changes occur only though the channel
-- Parameters may be given to modify how a component is displayed (HasParams)
+- Components may have state, and they are marked with Stateful trait
+- Drawing should not change state
 ** Player State Changes
 - There are three stages: Idle, Loading and Playing
 *** Idle
