--- a/README.org
+++ b/README.org
@@ -1,9 +1,13 @@
-* ampterm: OpenSubsonic-Compatible TUI Music Player
+:PROPERTIES:
+:ID:       ab803af1-3eca-4f97-a436-da828c101fa7
+:END:
+#+TITLE: OpenSubsonic-Compatible TUI Music Player
 TUI music player for your self-hosted music servers that provides OpenSubsonic API
-** How to build
+* How to build
 #+BEGIN_SRC shell
 cargo build --release
 #+END_SRC
-** Notes
+* Notes
 - Name is subject to change
 - I might take out the =OSClient= part of this project to a separate library
+
