--- a/Features.org
+++ b/Features.org
@@ -1,24 +1,25 @@
+:PROPERTIES:
+:ID:       4664dd76-2258-47e6-bde2-8439ca53ba31
+:END:
 #+TITLE: Features
 
 * Implemented
 - This list contains all the features that are currently present in the program.
 ** Basic Features
-*** Add Music Into The Queue
-- Add music into the queue using key combination
-- Three actions are available:
-  - Add to the queue
-  - Add next to the queue
-  - Add last to the queue
+- View your playlists
+- Play musics from your playlist
 ** Multiple Selection
 - Enter visual mode to select multiple musics
 - Anti-visual mode is used to de-select items
 - Press visual mode key to confirm, press Escape to discard selection
 * In Progress
 - This list contains all the features that are currently in development.
-** Add Playlist Into The Queue
 * Planned
 - This list contains all the features that are planned, but currently not being actively developed.
-** Mpri
+** Mpris
 ** Smart Playlist Editor
+** Lyric Display
+** Ampache-Specific API
+- Ampache allows 
 * Not Planned
 - This list contains all the features that will not be included, with reasons for such decision.
